# warf-analyzer

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.design-sync/: config.json
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  alert_rules.py  config.py  db.py  import_podroll.py  main.py  market_client.py  models.py  rate_limiter.py  repositories.py  schemas.py  seed.py  settings_store.py  worker.py  ws.py
backend/app/routes/: __init__.py  alerts.py  groll.py  settings.py  watchlist.py  weapons.py
backend/src/alecaframe_api/: __init__.py  bridge.py  config.py  main.py  naming.py  schemas.py
backend/src/alecaframe_api/db/: __init__.py  repo.py  schema.sql
backend/src/alecaframe_api/fissures/: client.py  dependencies.py  matcher.py  models.py  poller.py  router.py  telegram.py
backend/src/alecaframe_api/infra/: __init__.py  broker.py  cache.py  push.py
backend/src/alecaframe_api/reference/: __init__.py  incarnon_profiles.py  nodes_loader.py  router.py  stats_loader.py  wfm_riven_attributes.json
backend/src/alecaframe_api/wfm/: auction_poller.py  auctions_client.py  client.py  consumer.py  dependencies.py  history.py  history_router.py  me_router.py  poller.py  price_poller.py  price_store.py  prices.py  recipe_uses.py  riven_scoring.py  rivens_analysis.py  rivens_router.py  router.py  sets.py  sets_loader.py  signals.py  slugs.py  socket.py
backend/src/decrypt_agent/: __init__.py  main.py
backend/tests/: test_alert_rules.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docker/backend/: .dockerignore  Dockerfile
docker/centrifugo/: config.json
docker/frontend/: Dockerfile  nginx.conf
docker/poller/: Dockerfile
docker/rabbitmq/: definitions.json  rabbitmq.conf
docker/redis/: redis.conf
docs/: RESUMING.md
docs/superpowers/plans/: 2026-05-24-phase-b0-foundation.md  2026-05-25-frontend-query-cache-persistence.md  2026-05-25-phase-b1a-wfm-rest.md  2026-05-25-phase-b1b-frontend-pages.md  2026-05-25-phase-b1c-realtime.md  2026-05-25-phase-b2a-history-signals.md  2026-06-21-fissure-planet-node-filters.md  2026-06-21-void-fissure-telegram-subscriptions.md  2026-06-22-test-structure-and-ci.md
docs/superpowers/specs/: 2026-05-24-alecaframe-trading-platform-design.md  2026-05-25-frontend-query-cache-persistence-design.md  (+3 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  styles.css  types.ts  vite-env.d.ts
scripts/: dump_inventory.ps1  probe_alecaframe_dll.ps1  start-stack.ps1
src/alecaframe_api/: __init__.py  bridge.py  config.py  main.py  naming.py  schemas.py
src/decrypt_agent/: main.py
tests/: README.md  __init__.py  conftest.py  test_bridge.py  test_config.py  test_db_repo_rivens.py  test_decrypt_agent.py  test_fissures_client.py  test_fissures_models.py  test_fissures_poller.py  test_fissures_repo.py  test_fissures_router.py  test_infra_broker.py  test_infra_cache.py  test_infra_push.py  test_smoke_e2e.py  test_wfm_client.py  test_wfm_history.py  test_wfm_price_poller.py  test_wfm_prices.py  test_wfm_recipe_uses.py  test_wfm_rivens_analysis.py  test_wfm_sets.py  test_wfm_sets_loader.py  test_wfm_signals.py  test_wfm_slugs.py
tests/e2e/: test_smoke_e2e.py
tests/fixtures/: __init__.py  wfm_fissures_sample.json  wfm_items_sample.json  wfm_orders_kronen_prime_blade.json
tests/unit/: test_fissures_config.py  test_fissures_matcher.py  test_incarnon_profiles.py  test_riven_incarnon_scoring.py  test_riven_scoring.py  test_stats_loader.py  test_wfm_price_store.py  test_wfm_rivens_analysis.py  test_wfm_sets.py
(+125 files in other folders)
