[project]
name = "alecaframe-api"
version = "0.1.0"
description = "Off-line FastAPI backend for AlecaFrame Warframe inventory."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "pystray>=0.19.5; sys_platform == 'win32'",
    "uvicorn[standard]>=0.48.0",
    "win10toast-click>=0.1.2; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alecaframe_api", "src/decrypt_agent"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]

[project.scripts]
alecaframe-api = "alecaframe_api.main:run"
alecaframe-decrypt-agent = "decrypt_agent.main:run"
alecaframe-poller = "alecaframe_api.wfm.poller:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
