[project]
name = "alecaframe-api"
version = "0.1.0"
description = "Off-line FastAPI backend for AlecaFrame Warframe inventory."
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5",
    "aiolimiter>=1.2",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "fastapi>=0.136.3",
    "httpx>=0.28",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.9",
    "pystray>=0.19.5; sys_platform == 'win32'",
    "redis>=5.2",
    "uvicorn[standard]>=0.48.0",
    "websockets>=14.1",
    "win10toast-click>=0.1.2; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alecaframe_api", "src/decrypt_agent"]

[dependency-groups]
dev = [
    "fakeredis>=2.26",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]

[project.scripts]
alecaframe-api = "alecaframe_api.main:run"
alecaframe-decrypt-agent = "decrypt_agent.main:run"
alecaframe-poller = "alecaframe_api.wfm.poller:run"

# pytest config lives in the repo-root pytest.ini (tests stay at the root while
# this project lives in backend/). Run from the root: `uv run --project backend pytest`.
